fix(style): change main image scroll behavior, update portfolio spacings

--- a/css/hp.scss
+++ b/css/hp.scss
@@ -8,13 +8,21 @@
   height: 100vh;
   min-height: 100vh;
   position: relative;
-
   background: linear-gradient(
       rgba(182, 225, 238, 0.281),
       rgba(157, 191, 218, 0.658)
     ),
-    url('../img/patrick-schopflin-TN2Azd9iPaM.jpg') no-repeat fixed center /
+    url('../img/patrick-schopflin-TN2Azd9iPaM.jpg') no-repeat scroll center /
       cover;
+
+  @include main.min-desktop-width() {
+    background: linear-gradient(
+        rgba(182, 225, 238, 0.281),
+        rgba(157, 191, 218, 0.658)
+      ),
+      url('../img/patrick-schopflin-TN2Azd9iPaM.jpg') no-repeat fixed center /
+        cover;
+  }
 
   & &-content {
     position: absolute;
@@ -68,7 +76,7 @@ a {
   box-sizing: border-box;
   max-width: 100%;
   margin: 0 auto;
-  padding: 50px 3% 20px 3%;
+  padding: 40px 3% 20px 3%;
 }
 
 .section-title {
